Fix filters panel layout shift

--- a/src/style.css
+++ b/src/style.css
@@ -490,8 +490,8 @@ form#editCase {
   transition: var(--transition);
 }
 
-#filter .collapsed>.col-md-12,
-#filter .col-md-12.collapsed {
+#filter.collapsed .collapsed>.col-md-12,
+#filter.collapsed .col-md-12.collapsed {
   height: 0;
   margin: 0;
   opacity: 0;
